horizontal overflow corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,30 @@
-body
+*
 {
-    overflow-x : hidden;
+    margin : 0;
+    padding : 0;
+}
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #business_body
 {
     padding : 50px 0px 0px 0px;
     z-index : 0;
+}
+
+.navbar-brand
+{
+    display : inline;
+    left : 0 !important;
+    margin : 0;
+    padding : 0;
 }
 
 #navigation_bar
@@ -288,11 +306,6 @@ img
     .card_description
     {
         height : 80px;
-    }
-
-    .fixed_right_button
-    {
-        right : -15px;
     }
 }
 
